app.css: added justify content space between in nav to correct spacing and alignments.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,20 @@
 nav {
   display: flex;
+  justify-content: space-between;
+}
+a {
   text-decoration: none;
   color:brown;
 }
-
 .home-icon .nav-links {
   flex:1;
 }
 
-.home-icon {
-  margin-right: 260px; right:0;
-}
 
 .nav-links {
   display: flex;
   align-items: center;
+  margin-right: 50px;
 }
 
 .nav-link {
@@ -33,4 +33,7 @@ h1 {
 
 h5 {
   margin: 0px 0px 15px 15px;
+}
+section{
+  display: flex;
 }
